--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,6 +10,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/2b8082af16.js" crossorigin="anonymous"></script>
     <!-- Tailwind custom color -->
     <script>
         tailwind.config = {
@@ -17,6 +19,7 @@
             extend: {
               colors: {
                 clifford: '#da373d',
+                customgrey: '#777',
               }
             }
           }
@@ -31,10 +34,102 @@
     <title>Tea House</title>
 </head>
 <body class="font-manrope">
-    <header>
+    <header class="container mx-auto">
+        <!-- Hero start -->
+        <div class="hero">
+            <div class="hero-content flex-col lg:flex-row"> 
+              <div>
+                <h1 class="text-7xl font-bold text-extrabold">It's good <hr>
+                    tea time at The <hr>Tea House</h1>
+                <p class="py-6 text-customgrey font-medium">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.</p>
+                <button class="btn btn-primary">Explore More</button>
+              </div>
+              
+              <div>
+                <img src="/images/banner.png" class="max-w-sm" />
+                <!-- Rating Badge -->
+                <div class="-mt-14 flex items-center gap-5 drop-shadow-lg bg-white p-5 w-60">
+                    <i class="fa-solid fa-star text-3xl text-amber-400"></i>
+                    <div>
+                        <h3>5.00</h3>
+                        <p>Trust Pilot Ratings</p>
+                    </div>
+                </div>
+              </div>
+            </div>
+          </div>
 
     </header>
-    <main>
+    <main class="container mx-auto">
+        <!-- Featured Section -->
+        <section class="text-center my-24">
+            <h3 class="text-5xl font-extrabold mb-8">Our Featured Products</h3>
+            <p class="font-medium text-customgrey lg:max-w-4xl mx-auto">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+        </section>
+        <!-- Card COntainer -->
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
+            <!-- First Card -->
+            <div class="card bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
+                <figure class="px-10 pt-10">
+                  <img src="/images/tea-1.png" alt="Tea One" class="rounded-xl" />
+                </figure>
+                <div class="card-body items-center text-center">
+                  <h2 class="card-title text-2xl font-extrabold">Milk Tea</h2>
+                  <p class="text-customgrey">Creamer could be replaced by fresh milk</p>
+                </div>
+            </div>
+            <!-- Second Card -->
+            <div class="card bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
+                <figure class="px-10 pt-10">
+                  <img src="/images/tea-2.png" alt="Tea One" class="rounded-xl" />
+                </figure>
+                <div class="card-body items-center text-center">
+                  <h2 class="card-title text-2xl font-extrabold">Milk Tea</h2>
+                  <p class="text-customgrey">Creamer could be replaced by fresh milk</p>
+                </div>
+            </div>
+            <!-- Third Card -->
+            <div class="card bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
+                <figure class="px-10 pt-10">
+                  <img src="/images/tea-3.png" alt="Tea One" class="rounded-xl" />
+                </figure>
+                <div class="card-body items-center text-center">
+                  <h2 class="card-title text-2xl font-extrabold">Milk Tea</h2>
+                  <p class="text-customgrey">Creamer could be replaced by fresh milk</p>
+                </div>
+            </div>
+            <!-- Fourth Card -->
+            <div class="card bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
+                <figure class="px-10 pt-10">
+                  <img src="/images/tea-4.png" alt="Tea One" class="rounded-xl" />
+                </figure>
+                <div class="card-body items-center text-center">
+                  <h2 class="card-title text-2xl font-extrabold">Milk Tea</h2>
+                  <p class="text-customgrey">Creamer could be replaced by fresh milk</p>
+                </div>
+            </div>
+        </div>
+        <!-- Great Tea, Fresh Tea Starts -->
+        <section class="my-20 flex flex-col md:flex-row gap-12">
+            <!-- Image section -->
+            <div class="grid gap-8 grid-cols-1 md:grid-cols-2 flex-1">
+                <div class="rounded-xl h-36 bg-gradient-to-r from-[#F00] to-[#FF8938] opacity-10"></div>
+                <div class="rounded-xl row-span-2 px-8 py-12 bg-[#e6a6231a] flex justify-center items-center"><img src="./images/fresh-1.png" alt=""></div>
+                <div class="rounded-xl row-span-2 px-8 py-12 bg-[#5776391a] flex justify-center items-center"><img src="./images/fresh-2.png" alt=""></div>
+                <div class="rounded-xl h-36 bg-gradient-to-r from-[#D9D9D9] to-[#FFF]"></div>
+
+            </div>
+            <!-- Text Section -->
+            <div class="space-y-6 flex-1">
+                <h3 class="text-5xl font-extrabold">Great Tea, Freshly Presented</h3>
+                <p class="font-medium text-customgrey">The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
+                <h3 class="font-extrabold">Unique Taste</h3>
+                <p class="font-medium text-customgrey">A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
+                <h3 class="font-extrabold">Premium Quality</h3>
+                <p class="font-medium text-customgrey">Premium Quality that makes tea more elegant and more durable when you use it.</p>
+            </div>
+
+        </section>
 
     </main>
     <footer>
