Client section added

--- a/index.html
+++ b/index.html
@@ -130,6 +130,24 @@
             </div>
 
         </section>
+        <!-- Our Super Clients -->
+        <section class="p-24 rounded-lg my-24 mx-24 bg-gradient-to-r from-[#FF8938] to-[#F00] flex flex-col lg:flex-row">
+          <!-- Super Client Left Side -->
+          <div class="flex-1 space-y-5">
+            <h2 class="text-white font-extrabold text-5xl">Meet Our Super <hr>Clients</h2>
+            <p class="text-white font-medium">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+            <button class="btn ">Show All</button>
+
+          </div>
+          <!-- Super Cleint Right Side -->
+          <div class="bg-white rounded-lg p-10 flex-1 relative">
+            <img class="absolute -top-5 -left-5" src="./images/client.png" alt="">
+            <p class="text-customgrey">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+            <h4 class="mt-5 font-bold">Ilham Yuda</h4>
+            <p class="text-customgrey">Businessman</p>
+
+          </div>
+        </section>
 
     </main>
     <footer>
