--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <!-- First Card -->
             <div class="card bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
                 <figure class="px-10 pt-10">
-                  <img src="/images/tea-1.png" alt="Tea One" class="rounded-xl" />
+                  <img src="./images/tea-1.png" alt="Tea One" class="rounded-xl" />
                 </figure>
                 <div class="card-body items-center text-center">
                   <h2 class="card-title text-2xl font-extrabold">Milk Tea</h2>
@@ -81,7 +81,7 @@
             <!-- Second Card -->
             <div class="card bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
                 <figure class="px-10 pt-10">
-                  <img src="/images/tea-2.png" alt="Tea One" class="rounded-xl" />
+                  <img src="./images/tea-2.png" alt="Tea One" class="rounded-xl" />
                 </figure>
                 <div class="card-body items-center text-center">
                   <h2 class="card-title text-2xl font-extrabold">Milk Tea</h2>
@@ -91,7 +91,7 @@
             <!-- Third Card -->
             <div class="card bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
                 <figure class="px-10 pt-10">
-                  <img src="/images/tea-3.png" alt="Tea One" class="rounded-xl" />
+                  <img src="./images/tea-3.png" alt="Tea One" class="rounded-xl" />
                 </figure>
                 <div class="card-body items-center text-center">
                   <h2 class="card-title text-2xl font-extrabold">Milk Tea</h2>
@@ -101,7 +101,7 @@
             <!-- Fourth Card -->
             <div class="card bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
                 <figure class="px-10 pt-10">
-                  <img src="/images/tea-4.png" alt="Tea One" class="rounded-xl" />
+                  <img src="./images/tea-4.png" alt="Tea One" class="rounded-xl" />
                 </figure>
                 <div class="card-body items-center text-center">
                   <h2 class="card-title text-2xl font-extrabold">Milk Tea</h2>
